# schedule_visualizer_plugin

./: .gitignore  .pre-commit-config.yaml  .yamllint.yml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  format.ts  heat.ts  main.tsx  styles.css  theme.ts
frontend/src/components/: BarChart.tsx  Controls.tsx  CronCheck.tsx  Heatmap.tsx  LineChart.tsx  MinuteHeatmap.tsx  SortableTable.tsx  Suggest.tsx
plugins/: schedule_visualizer_plugin.py
scripts/: demo.py  run_pre_commit.sh  setup.sh  smoke_loader.py
src/schedule_visualizer/: __init__.py  assess.py  cache.py  config.py  core.py  plugin.py  service.py  suggest.py
src/schedule_visualizer/airflow_io/: __init__.py  adapter.py  loader.py
src/schedule_visualizer/static/: index.html
src/schedule_visualizer/static/assets/: index-B-7bkvnJ.css  index-DCpUwPV6.js  index-DLhXlC7s.css  index-DWMUoNys.css  index-DbdDkUHf.css  index-DdxvvIWU.js  index-VzQ4ihlJ.js  index-xwWFpPUA.js
src/schedule_visualizer/web/: __init__.py  api.py  serialize.py
templates/schedule_visualizer_plugin/: schedule_visualizer_plugin.html
tests/: test_adapter.py  test_api.py  test_assess.py  test_cache.py  test_config.py  test_core.py  test_loader.py  test_serialize.py  test_service.py  test_suggest.py
